introspection of form classes.

Validators
----------

### `sfValidatorRegex`

The `sfValidatorRegex` has a new `must_match` option. If set to `false`, the
regex must not match for the validator to pass.

### `sfValidatorSchemaCompare`

The `sfValidatorSchemaCompare` class has two new comparators:

 * `IDENTICAL`, which is equivalent to `===`;
 * `NOT_IDENTICAL`, which is equivalent to `!==`;

sfToolkit
---------

The `getTmpDir()` method has been deprecated and is no longer used in the
symfony core classes. You can replace usage of this method by the built-in
`sys_get_temp_dir()` PHP function. The `getTmpDir()` is now just a proxy to
this method.

This method will be removed in the symfony 1.4.

Forms
-----

### `sfForm::useFields()`

The new `sfForm::useFields()` method removes all non-hidden fields from a form
except the ones given as an argument. It is sometimes easier to explicitly
give the fields you want to keep in a form, instead of unsetting all unneeded
fields. For instance, when adding new fields to a base form, they won't
automagically appear in your form until explicitly added (think of a model
form where you add a new column to the related table).

    [php]
    class ArticleForm extends BaseArticleForm
    {
      public function configure()
      {
        $this->useFields(array('title', 'content'));
      }
    }

By default, the array of fields is also used to change the fields order. You
can pass `false` as the second argument to `useFields()` to disable the
automatic reordering.

### `sfFormSymfony`

The new `sfFormSymfony` class introduces the event dispatcher to symfony
forms. You can access the dispatcher from inside your form classes as
`self::$dispatcher`. The following form events are now notified by symfony:

  * `form.post_configure`:   This event is notified after every form is
                             configured
  * `form.filter_values`:    This event filters the merged, tainted parameters