@@ -85,6 +85,13 @@ The `sfValidatorSchemaCompare` class has two new comparators:
  * `IDENTICAL`, which is equivalent to `===`;
  * `NOT_IDENTICAL`, which is equivalent to `!==`;
 
+### `sfValidatorChoiceMany`
+
+The `sfValidatorChoiceMany` validator has two new options:
+
+ * `min` The minimum number of values that need to be selected
+ * `max` The maximum number of values that need to be selected
+
 sfToolkit
 ---------
 
